--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -23,7 +25,8 @@
              <source src="Videos/greyOverlayLoop.mp4" type="video/mp4">
             </video>
         <!-- end of autoplayVideo 
-            <a id="logo-container" href="#" class="brand-logo white-text center hide-on-med-and-down"><img class="responsive-img" src="images/odyssey_animated.svg" style="padding-top:250px;"></a>
+            <a id="logo-container" href="#" class="brand-logo white-text center hide-on-med-and-down"><img class="responsive-img" src="
+            /odyssey_animated.svg" style="padding-top:250px;"></a>
         
             <a id="logo-container" href="#" class="brand-logo white-text center hide-on-large-only"><img class="responsive-img" src="images/odysseyMobile.png" style="padding:100px;"></a>-->
             
@@ -77,7 +80,7 @@
  <!-- About Section -->
 <div id="About" class="scrollspy block col s12 m12 l12">
     <div class="parallax-container">
-    <div class="parallax"><img src="Images/about-img-01.png"/></div>
+    <div class="parallax"><img src="images/about-img-01.png"/></div>
 
 
         <div class="row">
@@ -96,19 +99,19 @@
                  <div class="container">
                     <div class="col s4">
                         <div class="center">
-                            <img class="responsive-img no-padding" src="Images/Defend-Icon-01.png">
+                            <img class="responsive-img no-padding" src="images/Defend-Icon-01.png">
                             <h5>Defend</h5>
                         </div>
                     </div>
                     <div class="col s4">
                         <div class="center">
-                            <img class="responsive-img no-padding" src="Images/Repair-Icon-01.png">
+                            <img class="responsive-img no-padding" src="images/Repair-Icon-01.png">
                             <h5>Repair</h5>
                         </div>
                     </div>
                     <div class="col s4">
                         <div class="center">
-                            <img class="responsive-img no-padding" src="Images/Success-Icon-01.png">
+                            <img class="responsive-img no-padding" src="images/Success-Icon-01.png">
                             <h5>Succeed?</h5>
                         </div>
                     </div>
@@ -181,7 +184,7 @@
     <div class="col s12 m4">
       <div class="card hoverable large">
         <div class="card-image">
-          <img src="Images/ship-Rot.gif" class="activator">
+          <img src="images/ship-Rot.gif" class="activator">
           <span class="card-title truncate">ODYSSEY 4901</span>
         </div>
         <div class="card-content blue-grey-text activator flow-text" style="font-size: 1.0rem;">
@@ -267,7 +270,7 @@ Height – 11 m</td>
     <div class="col s12 m4">
       <div class="card hoverable large">
         <div class="card-image">
-          <img src="Images/DaveRender.gif" class="activator">
+          <img src="images/DaveRender.gif" class="activator">
           <span class="card-title white-text">D. A. V. E.</span>
         </div>
         <div class="card-content blue-grey-text">
