Changed Last Image that was broken

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                  <div class="row container">
                     <div class="col s12 m12">
 
-                          <img class="responsive-img" src="Images/Area5Mothership.png">
+                          <img class="responsive-img" src="Images/ARCMothership.png">
 
                           <p class="center">ARCorporation is an intergalactic multi-industry conglomerate. In the year 3001 AD, ARC suffered from a steep decline in stock prices. To combat this, the company decided to expand their subsidiary, Arc Hotels, to planets in uncharted space. This requires them to send scout ships to survey these planets and find suitable building locations. ARCorporation was required to develop a new ship, The Odyssey 4901; a ship more powerful than preceding versions.</p>
 
