--- a/index.html
+++ b/index.html
@@ -347,28 +347,28 @@ Height – 11 m</td>
                 <div class="slider">
                     <ul class="slides" >
                       <li>
-                        <img src="Images/Area1.PNG">
+                        <img src="Images/Area1.png">
                         <div class="caption center-align white-text">
                           <h3>Area 1 - Grasslands </h3>
                           <h5 class="light">Mountanous region containing a grassy habitat for vegitation and plant life</h5>
                         </div>
                       </li>
                       <li>
-                        <img src="Images/Area2.PNG">
+                        <img src="Images/Area2.png">
                         <div class="caption left-align white-text">
                           <h3>Area 2 - Canyon</h3>
                           <h5 class="light">Rocky dried up canyon region, the rock formations indicate that there once was liquid flowing through the gorge, although its been dried up. The inhabitants of the planets are found lurking abouts in the canyons.</h5>
                         </div>
                       </li>
                       <li>
-                        <img src="Images/Area3.PNG"> 
+                        <img src="Images/Area3.png"> 
                         <div class="caption right-align white-text">
                           <h3>Area 3 - Volcano</h3>
                           <h5 class="light">At the end of the Canyon, a volcano is located with envidence that the inhabitants are living inside the crust of the volcano because it is warm. There is a tunnel passing throught the entire volcano, something looks similar about the volcano.</h5>
                         </div>
                       </li>
                       <li>
-                        <img src="Images/Area4Cave.PNG">
+                        <img src="Images/Area4Cave.png">
                         <div class="caption center-align white-text">
                           <h3>Area 4 - Cliff</h3>
                           <h5 class="light ">Narrow edge of a cliff, be careful you dont fall off and into the deep abyss of space</h5>
