--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@ Height – 11 m</td>
    </div>-->  
 
 <div id="World" class="parallax-container scrollspy white-text">
-  <div class="parallax"><img src="Images/URKBG-01.png"></div>
+  <div class="parallax"><img src="Images/URKBG.png"></div>
     <div class="row container">
        <div class="col s12">
           <h1 class="center light">World</h1>
