--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
                           <img class="responsive-img" src="Images/ArcMother.png">
 
-                          <p class="center">ARCorporation is an intergalactic multi-industry conglomerate. In the year 3001 AD, ARC suffered from a steep decline in stock prices. To combat this, the company decided to expand their subsidiary, Arc Hotels, to planets in uncharted space. This requires them to send scout ships to survey these planets and find suitable building locations. ARCorporation was required to develop a new ship, The Odyssey 4901; a ship more powerful than preceding versions.</p>
+                          <p class="center">ARC Corporation is an intergalactic multi-industry conglomerate. In the year 3001 AD, ARC suffered from a steep decline in stock prices. To combat this, the company decided to expand their subsidiary, Arc Hotels, to planets in uncharted space. This requires them to send scout ships to survey these planets and find suitable building locations. ARCorporation was required to develop a new ship, The Odyssey 4901; a ship more powerful than preceding versions.</p>
 
                     </div>
 				 <!-- Full ARC Card -->
@@ -201,7 +201,7 @@
 
         <div class="card-reveal blue-grey white text lighten-2">
           <span class="card-title section darken-1 white-text">Odyssey:<i class="material-icons right">close</i></span>
-          <p> The Odyssey 4901 is the newest model of the Odyssey scout ships. This ship is used by ARCorporation to survey unexplored planets for intergalactic hotel construction. Its unconventional shape makes it optimal for 360 environment scanning.<br>
+          <p> The Odyssey 4901 is the newest model of the Odyssey scout ships. This ship is used by ARC Corporation to survey unexplored planets for intergalactic hotel construction. Its unconventional shape makes it optimal for 360 environment scanning.<br>
 
 It runs on a futuristic looking warp engine allowing it to reach up to 1000 light-years; however it can move as slow as 10 KPH while surveying the environment.<br>
 
