--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="row center ">
         <!-- Start of autoplayVideo--> 
             <video autoplay loop muted class="banner__video">
-             <source src="Videos/greyOverlayLoop.mp4" type="video/mp4">
+             <source src="Videos/coverVideo.mp4" type="video/mp4">
             </video>
         <!-- end of autoplayVideo 
             <a id="logo-container" href="#" class="brand-logo white-text center hide-on-med-and-down"><img class="responsive-img" src="
@@ -563,8 +563,8 @@ Height – 11 m</td>
                           <div class="col s12 m6 l6">
                               <div class="card large blue-grey lighten-4">
                                 <div class="card-image">
-                                  <img class="responsive-img materialboxed" src="Images/patrick.jpg">
-                                  <span class="card-title">PJ</span>
+                                  <img class="responsive-img materialboxed" src="Images/Patrick_CC.png">
+                                  <span class="card-title grey-text text-darken-1">Patrick Stevens</span>
                                 </div>
                                 <div class="card-content left left-align flow-text grey-text text-darken-1">
                                   <p>Game Mechanics<br> Audio Engineer<br>Interaction Designer</p>
