--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
           <div class="card grey lighten-3 hoverable">
             <div class="card-image">
               <img src="Images/Player.gif">
-              <span class="card-title truncate">About Onboard Maintenance Robot</span>
+              <span class="card-title truncate">Onboard Maintenance Robot</span>
             </div>
             <div class="card-reveal blue-grey white text lighten-2">
           <span class="card-title section darken-1 white-text">O.M.R. The Player:<i class="material-icons right">close</i></span>
