wall of text changed

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
   <title>Odyssey - FlatEarth</title>
 
+  <link rel="icon" 
+      type="image/png" 
+      href="Images/DAVE-01.png">
+
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
@@ -87,7 +91,7 @@
 
         <div class="row">
             <div class="container center">
-                <h5 class="light"> <br>The Arc Corporation has sent you on a mission, you are the top of the line repair robot, to defend and repair their ship as it maps a bizarre planet.<br> <br> Do you have what it takes to ensure the mission is successful?</h5>
+                <h5 class="light"> <br>The Arc Corporation has sent you on a mission, you are a top-of-the-line repair robot sent on a mission to defend and repair a surveying ship as it traverses a bizarre alien planet.<br> <br> Do you have what it takes to ensure the mission is successful?</h5>
             </div>
         </div>
 
@@ -144,23 +148,23 @@
 <div class="divider yellow accent-2">
 </div>
 
-<!-- Arc Corperation Content -->
-<!-- Arc Corperation Content -->
-<!-- Arc Corperation Content -->
+<!-- Arc corporation Content -->
+<!-- Arc corporation Content -->
+<!-- Arc corporation Content -->
 <div id="Arc" class=" scrollspy parallax-container" style="position:relative;">
 
 <div class="parallax"><img src="Images/ARCBG.png"></div>
 
 	<div class="row ">
                 <!-- Column 2 -->
-				<h1 class="white-text center light">Arc Corperation</h1>
+				<h1 class="white-text center light">Arc corporation</h1>
                  <!-- Full ARC Card -->
                  <div class="row container">
                     <div class="col s12 m12">
 
                           <img class="responsive-img" src="Images/ArcMother.png">
 
-                          <p class="center">ARC Corporation is an intergalactic multi-industry conglomerate. In the year 3001 AD, ARC suffered from a steep decline in stock prices. To combat this, the company decided to expand their subsidiary, Arc Hotels, to planets in uncharted space. This requires them to send scout ships to survey these planets and find suitable building locations. ARCorporation was required to develop a new ship, The Odyssey 4901; a ship more powerful than preceding versions.</p>
+                          <p class="center">Arc Corporation is an intergalactic multi-industry conglomerate. In the year 3001 AD, Arc suffered from a steep decline in stock prices. To combat this, the company decided to expand their subsidiary, Arc Hotels, to planets in uncharted space. This requires them to send scout ships to survey these planets and find suitable building locations. Arcorporation was required to develop a new ship, The Odyssey 4901; a ship more powerful than preceding versions.</p>
 
                     </div>
 				 <!-- Full ARC Card -->
@@ -176,7 +180,7 @@
             </div>
             <div class="card-reveal blue-grey white text lighten-2">
           <span class="card-title section darken-1 white-text">O.M.R. The Player:<i class="material-icons right">close</i></span>
-              <p>O.M.R – The Onboard Maintenance Robots that accompany Odyssey ships are trained to protect the vehicle from getting damaged and repair the vehicle if it does. These robots are programmed with complex artificial intelligence to ensure they have human-like decisions making skills. O.M.R.’s are trained in shell simulators which create authentic real-world situations in an artificial environment.
+              <p>The Onboard Maintenance Robot is a robot that accompanies the Odyssey 4901. The O.M.R. is trained to defend and repair the ship. This robot is programmed with complex artificial intelligence to ensure it has human-like decisions making skills. O.M.R.’s are trained in simulators which create authentic real-world situations in an artificial environment.
 </p>
             </div>
             <div class="card-action activator">
@@ -201,9 +205,9 @@
 
         <div class="card-reveal blue-grey white text lighten-2">
           <span class="card-title section darken-1 white-text">Odyssey:<i class="material-icons right">close</i></span>
-          <p> The Odyssey 4901 is the newest model of the Odyssey scout ships. This ship is used by ARC Corporation to survey unexplored planets for intergalactic hotel construction. Its unconventional shape makes it optimal for 360 environment scanning.<br>
+          <p> The Odyssey 4901 is the newest model of the Odyssey scout ships. This ship is used by Arc Corporation to survey unexplored planets for intergalactic hotel construction. Its unconventional shape makes it optimal for 360 degree environment scanning.<br>
 
-It runs on a futuristic looking warp engine allowing it to reach up to 1000 light-years; however it can move as slow as 10 KPH while surveying the environment.<br>
+It runs on a futuristic warp engine allowing it to reach up to 1000 light years per hour; however it can move as slow as 10 KPH while surveying the environment.<br>
 
 Similar to other Odyssey models, the 4901 comes equipped with a Digital Assistant for Vehicular Exploration Unit (D.A.V.E.), as well as an Onboard Maintenance Robot (O.M.R.). Robots are used as the crew instead of humans because of the dangerous nature of uncharted space exploration.
 </p>
@@ -213,7 +217,7 @@ Similar to other Odyssey models, the 4901 comes equipped with a Digital Assistan
             <tbody>
               <tr>
                 <td>Manufacturer</td>
-                <td>ARCorporation</td>
+                <td>Arcorporation</td>
               </tr>
               <tr>
                 <td>Model Number</td>
@@ -250,7 +254,7 @@ Height – 11 m</td>
               </tr>
               <tr>
                 <td>Mass</td>
-                <td>12,000 KG</td>
+                <td>12,000 kg</td>
               </tr>
               <tr>
                 <td>Floors</td>
@@ -258,7 +262,7 @@ Height – 11 m</td>
               </tr>
               <tr>
                 <td>Max Speed</td>
-                <td>1000 LY</td>
+                <td>1000 ky/h</td>
               </tr>
               <tr>
                 <td>Surveying Speed</td>
@@ -281,7 +285,7 @@ Height – 11 m</td>
         </div>
          <div class="card-reveal blue-grey white text lighten-2">
           <span class="card-title section darken-1 white-text"><i class="material-icons right">close</i> D.A.V.E.</span>        <!--<img class="responsive-img" src="Images/ship-Rot.gif"/>-->
-          <p>Digital Assistance for Vehicular Exploration or D.A.V.E. acts as an assistant to the O.M.R, feeding it data on the ship's status and the surrounding environment. Unlike older models of the Odyssey ship, D.A.V.E also serves the purpose of navigating the ship. Allowing the O.M.R.’s to focus on the maintenance aspect. D.A.V.E. takes the collision deterrence data from the Odysseys sensors to determine the best possible path to travel.
+          <p>Digital Assistance for Vehicular Exploration or D.A.V.E. acts as an assistant to the O.M.R, feeding it data on the ship's status and the surrounding environment. Unlike older models of the Odyssey ship, D.A.V.E also serves the purpose of navigating the ship. Allowing the O.M.R.’s to focus on the maintenance aspect. D.A.V.E. takes the collision deterrence data from the Odyssey's sensors to determine the best possible path to travel.
 
 </p>
         </div>    
@@ -303,11 +307,11 @@ Height – 11 m</td>
         <!--<div class="parallax"><img src="Images/largeUrkGrey-01.jpg"></div>-->
 	</div>
 </div>
-<!-- Arc Corperation Content -->
-<!-- Arc Corperation Content -->
-<!-- Arc Corperation Content -->
-<!-- Arc Corperation Content -->
-<!-- Arc Corperation Content -->
+<!-- Arc corporation Content -->
+<!-- Arc corporation Content -->
+<!-- Arc corporation Content -->
+<!-- Arc corporation Content -->
+<!-- Arc corporation Content -->
 
 
 <div class="divider yellow accent-2"></div>
@@ -323,7 +327,7 @@ Height – 11 m</td>
   <div class="parallax"><img src="Images/UrkBG-01.png"></div>
     <div class="row container">
        <div class="col s12">
-          <h1 class="center light">World</h1>
+          <h1 class="center light">Planet</h1>
           <p>PlanetXXXX is a simulated planet used to train Onboard Maintenance Robots (O.M.R.). The planet was created to replicate the typical features and dangers of  extraterrestrial planets. The predominant sentient life on the planet is the Urk species.</p>
        </div>
      </div>
@@ -334,10 +338,10 @@ Height – 11 m</td>
          </div>
          <div class="col s6 center">
             <p class="left-align">Diameter: 2,567 KM<br>
-              Atmosphere: Lighting Storms, Dense Fog<br>
+              Atmosphere: Lighting Storms, Meteorite showers, Dense Fog<br>
               Predominant Fauna: Urk<br>
               Predominant Flora: Spotted Aclomond, Orb <br>Vine, Spiked Dandelion, Blood Prene<br>
-              Moons: 3<br>
+              Moons: 1<br>
               Gravity: 7.341 M/S2<p>
          </div>
       </div>
@@ -346,7 +350,7 @@ Height – 11 m</td>
         <div class="col s12 center white-text container">
     <h4>Primary Terrains:</h4>
     <h5 class="light">
-    <br>Outbacks, Valleys, Volcanic Caves, Cliffs
+    <br>Outbacks, Canyons, Volcanic Caves, Plateaus
       </h5>
   </div>    
  
@@ -360,28 +364,28 @@ Height – 11 m</td>
                         <img src="Images/Grasslands.png">
                         <div class="caption center-align white-text">
                           <h3>Outback </h3>
-                          <h5 class="light">Mountanous region containing a short, stubby and dry vegitation.</h5>
+                          <h5 class="light">Mountainous region containing short, stubby, and dry vegetation.</h5>
                         </div>
                       </li>
                       <li>
                         <img src="Images/canyon.png">
                         <div class="caption left-align white-text">
                           <h3>Canyon</h3>
-                          <h5 class="light">Rocky canyon region, the rock formations indicate that there once was liquid flowing through the gorge, although its been dried up. The inhabitants of the planets are found lurking abouts in the canyons.</h5>
+                          <h5 class="light">Rocky canyon region, the rock formations indicate that there once was liquid flowing through the gorge, although it has been dried up. The inhabitants of the planets are found lurking abouts in the canyons.</h5>
                         </div>
                       </li>
                       <li>
                         <img src="Images/Volcano.png"> 
                         <div class="caption right-align white-text">
                           <h3>Volcano</h3>
-                          <h5 class="light">At the end of the Canyon, a volcano is located with envidence that the inhabitants are living inside the crust of the volcano because it is warm. There is a tunnel passing throught the entire volcano, something looks similar about the volcano.</h5>
+                          <h5 class="light">A volcano with a cave system - home to the Urks.</h5>
                         </div>
                       </li>
                       <li>
                         <img src="Images/clif.png">
                         <div class="caption center-align white-text">
-                          <h3>Cliff</h3>
-                          <h5 class="light ">Narrow edge of a cliff, be careful you dont fall off and into the deep abyss of space</h5>
+                          <h3>Plateaus</h3>
+                          <h5 class="light ">Narrow edge of a plateaus, be careful you dont fall off and into the deep abyss of space</h5>
                         </div>
                       </li>
 
