--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <ul id="" class="  blue-grey lighten-1">
        <div class="userView">
         <li><a href="#About" class="white-text" >About</a></li>
-        <li><a href="#Arc" class="white-text" >Arc</a></li>
+        <li><a href="#Arc" class="white-text" >ARC</a></li>
         <li><a href="#World" class="white-text" >World</a></li>
         <li><a href="#Team" class="white-text" >Team</a></li>
       </ul>
@@ -91,7 +91,7 @@
 
         <div class="row">
             <div class="container center">
-                <h5 class="light"> <br>The Arc Corporation has sent you on a mission, you are a top-of-the-line repair robot sent on a mission to defend and repair a surveying ship as it traverses a bizarre alien planet.<br> <br> Do you have what it takes to ensure the mission is successful?</h5>
+                <h5 class="light"> <br>The ARC Corporation has sent you on a mission, you are a top-of-the-line repair robot sent on a mission to defend and repair a surveying ship as it traverses a bizarre alien planet.<br> <br> Do you have what it takes to ensure the mission is successful?</h5>
             </div>
         </div>
 
@@ -157,14 +157,14 @@
 
 	<div class="row ">
                 <!-- Column 2 -->
-				<h1 class="white-text center light">Arc corporation</h1>
+				<h1 class="white-text center light">ARC corporation</h1>
                  <!-- Full ARC Card -->
                  <div class="row container">
                     <div class="col s12 m12">
 
                           <img class="responsive-img" src="Images/ArcMother.png">
 
-                          <p class="center">Arc Corporation is an intergalactic multi-industry conglomerate. In the year 3001 AD, Arc suffered from a steep decline in stock prices. To combat this, the company decided to expand their subsidiary, Arc Hotels, to planets in uncharted space. This requires them to send scout ships to survey these planets and find suitable building locations. Arcorporation was required to develop a new ship, The Odyssey 4901; a ship more powerful than preceding versions.</p>
+                          <p class="center">ARC Corporation is an intergalactic multi-industry conglomerate. In the year 3001 AD, ARC suffered from a steep decline in stock prices. To combat this, the company decided to expand their subsidiary, ARC Hotels, to planets in uncharted space. This requires them to send scout ships to survey these planets and find suitable building locations. ARC Corporation was required to develop a new ship, The Odyssey 4901; a ship more powerful than preceding versions.</p>
 
                     </div>
 				 <!-- Full ARC Card -->
@@ -205,7 +205,7 @@
 
         <div class="card-reveal blue-grey white text lighten-2">
           <span class="card-title section darken-1 white-text">Odyssey:<i class="material-icons right">close</i></span>
-          <p> The Odyssey 4901 is the newest model of the Odyssey scout ships. This ship is used by Arc Corporation to survey unexplored planets for intergalactic hotel construction. Its unconventional shape makes it optimal for 360 degree environment scanning.<br>
+          <p> The Odyssey 4901 is the newest model of the Odyssey scout ships. This ship is used by ARC Corporation to survey unexplored planets for intergalactic hotel construction. Its unconventional shape makes it optimal for 360 degree environment scanning.<br>
 
 It runs on a futuristic warp engine allowing it to reach up to 1000 light years per hour; however it can move as slow as 10 KPH while surveying the environment.<br>
 
@@ -217,7 +217,7 @@ Similar to other Odyssey models, the 4901 comes equipped with a Digital Assistan
             <tbody>
               <tr>
                 <td>Manufacturer</td>
-                <td>Arcorporation</td>
+                <td>ARC Corporation</td>
               </tr>
               <tr>
                 <td>Model Number</td>
