--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
 	<div class="row ">
                 <!-- Column 2 -->
-				<h1 class="white-text center light">ARC corporation</h1>
+				<h1 class="white-text center light">ARC Corporation</h1>
                  <!-- Full ARC Card -->
                  <div class="row container">
                     <div class="col s12 m12">
