--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <link rel="icon" 
       type="image/png" 
-      href="Images/DAVE-01.png">
+      href="Images/Dave-Favicon.png">
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
