--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
         <div class="row">
             <div class="container center">
-                <h5 class="light"> <br>The ARC Corporation has sent you on a mission, you are a top-of-the-line repair robot sent on a mission to defend and repair a surveying ship as it traverses a bizarre alien planet.<br> <br> Do you have what it takes to ensure the mission is successful?</h5>
+                <h5 class="light"> <br>The ARC Corporation has sent you on a mission, you are a top-of-the-line repair robot sent to defend and repair a surveying ship as it traverses a bizarre alien planet.<br> <br> Do you have what it takes to ensure the mission is successful?</h5>
             </div>
         </div>
 
@@ -195,7 +195,7 @@
             </div>
             <div class="card-reveal blue-grey white text lighten-2">
           <span class="card-title section darken-1 white-text">O.M.R. The Player:<i class="material-icons right">close</i></span>
-              <p>The Onboard Maintenance Robot is a robot that accompanies the Odyssey 4901. The O.M.R. is trained to defend and repair the ship. This robot is programmed with complex artificial intelligence to ensure it has human-like decisions making skills. O.M.R.’s are trained in simulators which create authentic real-world situations in an artificial environment.
+              <p>The Onboard Maintenance Robot is a robot that accompanies the Odyssey 4901. The O.M.R. is trained to defend and repair the ship. This robot is programmed with complex artificial intelligence to ensure it has human-like decision making skills. O.M.R.’s are trained in simulators which create authentic real-world situations in an artificial environment.
 </p>
             </div>
             <div class="card-action activator">
@@ -277,7 +277,7 @@ Height – 11 m</td>
               </tr>
               <tr>
                 <td>Max Speed</td>
-                <td>1000 ly/h</td>
+                <td>1000 LY/h</td>
               </tr>
               <tr>
                 <td>Surveying Speed</td>
@@ -300,7 +300,7 @@ Height – 11 m</td>
         </div>
          <div class="card-reveal blue-grey white text lighten-2">
           <span class="card-title section darken-1 white-text"><i class="material-icons right">close</i> D.A.V.E.</span>        <!--<img class="responsive-img" src="Images/ship-Rot.gif"/>-->
-          <p>Digital Assistance for Vehicular Exploration or D.A.V.E. acts as an assistant to the O.M.R, feeding it data on the ship's status and the surrounding environment. Unlike older models of the Odyssey ship, D.A.V.E also serves the purpose of navigating the ship. Allowing the O.M.R.’s to focus on the maintenance aspect. D.A.V.E. takes the collision deterrence data from the Odyssey's sensors to determine the best possible path to travel.
+          <p>The Digital Assistant for Vehicular Exploration or "D.A.V.E" acts as an assistant to the O.M.R, feeding it data on the ship's status and the surrounding environment. Unlike older models of the Odyssey ship, D.A.V.E also serves the purpose of navigating the ship. This allows the O.M.R. to focus solely on the maintenance and defence. D.A.V.E takes the collision deterrence data from the Odyssey's sensors to determine the best possible path to travel.
 
 </p>
         </div>    
@@ -357,7 +357,7 @@ Height – 11 m</td>
               Predominant Fauna: Urk<br>
               Predominant Flora: Spotted Aclomond, Orb <br>Vine, Spiked Dandelion, Blood Prene<br>
               Moons: 1<br>
-              Gravity: 7.341 M/S2<p>
+	      Gravity: 7.341 M/S<sup>2</sup><p>
          </div>
       </div>
 
@@ -386,7 +386,7 @@ Height – 11 m</td>
                         <img src="Images/canyon.png">
                         <div class="caption left-align white-text">
                           <h3>Canyon</h3>
-                          <h5 class="light">Rocky canyon region, the rock formations indicate that there once was liquid flowing through the gorge, although it has been dried up. The inhabitants of the planets are found lurking abouts in the canyons.</h5>
+                          <h5 class="light">Rocky canyon region, the rock formations indicate that there once was liquid flowing through the gorge.</h5>
                         </div>
                       </li>
                       <li>
@@ -400,7 +400,7 @@ Height – 11 m</td>
                         <img src="Images/clif.png">
                         <div class="caption center-align white-text">
                           <h3>Plateaus</h3>
-                          <h5 class="light ">Narrow edge of a plateaus, be careful you dont fall off and into the deep abyss of space</h5>
+                          <h5 class="light ">A cliff area surrounded by tall plateaus. Be careful you don't fall off into the abyss of space!</h5>
                         </div>
                       </li>
 
@@ -420,7 +420,7 @@ Height – 11 m</td>
          <div class="row center container">
           <div class="divider"></div>
           <h4 class="center"><br>Inhabitants: The Urk</h4>
-          <p>The Urks are a primitive, violent, reptilian species indigenous to PlanetXXXX. They are the only sentient life on the planet. They are capable of creating crude technologies like blaster cannons, and hover cycles. Their eyes are highly sensitive to light so they live predominantly underground or in caves. They also tend to dwell near large heat sources. </p>
+          <p>The Urks are a primitive, violent, reptilian species indigenous to PlanetXXXX. They are the only sentient life on the planet. They are capable of creating crude technologies like blaster cannons, and hover cycles. Urks tend to dwell near large heat sources. </p>
           <h6 class="center">They are grouped into the following 2 Classes:</h6><br><br>
 
 
@@ -436,7 +436,7 @@ Height – 11 m</td>
             <img class="responsive-img" src="Images/enemies/Urk_Shooter.png">
           </div>
           <div class="col s12">
-             <p class="center">These Urks are equipped with a handheld canon that fires molten rocks at intruders. This Urk is typically found in groups near heat sources, and are very cautious about unexpected visitors.</p>
+             <p class="center">These Urks are equipped with a handheld canon that fires molten rocks at intruders. This Urk is typically found in groups near heat sources and are very cautious about unexpected visitors.</p>
            </div>
         </div>
 
@@ -452,7 +452,7 @@ Height – 11 m</td>
             <img class="responsive-img" src="Images/enemies/Urk_Speeder.png">
           </div>
           <div class="col s12">
-            <p class="center">These Urks are equipped with a hovering single passenger vehicle for travelling at enourmous speeds. They have only one goal in mind, protect their habitat. These Urks will attack relentlessly at potential threats.</p>
+            <p class="center">These Urks are equipped with a hovering single passenger vehicle for travelling at enormous speeds. They have only one goal in mind - protect their habitat. These Urks will attack relentlessly at potential threats.</p>
           </div>
 
         </div>
