--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
         <div class="row">
             <div class="container center">
-                <h5 class="light"> <br>The ARC Corporation has sent you on a mission, you are a top-of-the-line repair robot sent to defend and repair a surveying ship as it traverses a bizarre alien planet.<br> <br> Do you have what it takes to ensure the mission is successful?</h5>
+                <h5 class="light"> <br>The ARC Corporation has sent you on a mission. You are a top-of-the-line repair robot sent to defend and repair a surveying ship as it traverses a bizarre alien planet.<br> <br> Do you have what it takes to ensure the mission is successful?</h5>
             </div>
         </div>
 
