Added JS animation for DAVE to come into screen as soon as the user scrolls

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
   <link href="css/materialdesignicons.min.css" media="all" rel="stylesheet" type="text/css" /> 
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 
+
+
 </head>
 
 
@@ -82,11 +84,14 @@
  </div>
 
 
-<div id="whoosh" class="whoosh fixed-action-btn horizontal tooltipped" data-position="top" data-delay="50" data-tooltip="Want to try Odyssey out? Just click me and sign up to be a beta tester!">
+
+<div class="whoosh">
+  <div class=" horizontal tooltipped" data-position="top" data-delay="50" data-tooltip="Want to try Odyssey out? Just click me and sign up to be a beta tester!">
     <a class="btn-floating btn-large yellow accent-1" href="https://goo.gl/forms/iVRECOTky5IV97RI2">
       <img class="responsive-img" src="Images/DAVE-01-01.png">
     </a>
   </div>
+</div>
 
 
 <!-- End Nav Bar -->
@@ -703,6 +708,7 @@ Height – 11 m</td>
   <script src="js/init.js"></script>
   <script src="js/vivus.js">  </script>
   <script src="js/vivus.min.js">  </script>
+  <script src="js/javascript.js"></script>
 
   </body>
 </html>
