more tries to get it working on gitpages

--- a/index.html
+++ b/index.html
@@ -85,13 +85,13 @@
 
 
 
-<div class="whoosh">
-  <div class=" horizontal tooltipped" data-position="top" data-delay="50" data-tooltip="Want to try Odyssey out? Just click me and sign up to be a beta tester!">
+
+  <div class="whoosh horizontal tooltipped" data-position="top" data-delay="50" data-tooltip="Want to try Odyssey out? Just click me and sign up to be a beta tester!">
     <a class="btn-floating btn-large yellow accent-1" href="https://goo.gl/forms/iVRECOTky5IV97RI2">
       <img class="responsive-img" src="Images/DAVE-01-01.png">
     </a>
   </div>
-</div>
+
 
 
 <!-- End Nav Bar -->
