Made Dave Rotate on hover

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
 
   <div class="whoosh tooltipped" data-position="top" data-delay="50" data-tooltip="Want to try Odyssey out? Just click me and sign up to be a beta tester!">
-    <a class="btn-floating btn-large yellow accent-1" href="https://goo.gl/forms/iVRECOTky5IV97RI2">
+    <a class="btn-floating btn-large yellow accent-1 dave" href="https://goo.gl/forms/iVRECOTky5IV97RI2">
       <img class="responsive-img" src="Images/DAVE-01-01.png">
     </a>
   </div>
