removed about about

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             <div class="video-container">
               <iframe src="https://www.youtube.com/embed/7ERNSiiaupc" frameborder="0" allowfullscreen></iframe>
             </div>
-              <p>Learn about what your mission for ARC is really about.</p>
+              <p>Learn what your mission for ARC is really about.</p>
           </div>
         </div>
       </div>
